exports[`test Handles emoji with a multiple codepoints 1`] = `
<span
  className={undefined}>
  Great work 
  <img
    src="https://twemoji.maxcdn.com/2/72x72/1f44d-1f3fe.png" />
   
  <img
    src="https://twemoji.maxcdn.com/2/72x72/1f468-200d-1f469-200d-1f467-200d-1f466.png" />
</span>
`;

exports[`test Handles emoji with a single codepoint 1`] = `
<span
  className={undefined}>
  This 
  <img
    src="https://twemoji.maxcdn.com/2/72x72/2764.png" />
   is 
  <img
    src="https://twemoji.maxcdn.com/2/72x72/1f44c.png" />
</span>
`;

exports[`test Handles strings with no emoji 1`] = `
<span
  className={undefined}>
  Facebook
</span>
`;
